[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-utils"
version = "0.2.1"
description = "A collection of Python utility functions for date operations"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "TerseSquirrel", email = "tersesquirrel@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/tersesquirrel-dev/py-utils"
Repository = "https://github.com/tersesquirrel-dev/py-utils.git"
Issues = "https://github.com/tersesquirrel-dev/py-utils/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["date_utils*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
date_utils = ["py.typed"]